k8s/apps/dns/adguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: docker.io/adguard/adguardhome:v0.107.79@sha256:aba9e3bf0613be3ba3755e1fc311b126e2c24bec25e18b6483894a88283074f0
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dhcp
              containerPort: 67
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          # capabilities:
          #   drop: [ "ALL" ]
          volumeMounts:
            - name: config-folder
              mountPath: /opt/adguardhome/conf
            - name: work-folder
              mountPath: /opt/adguardhome/work
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          configMap:
            name: adguard-config
        - name: users
          secret:
            secretName: users
        - name: config-folder
          emptyDir: {}
        - name: work-folder
          emptyDir: {}
