k8s/apps/dns/adguard/base/svc-gw.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-gw
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
  selector:
    app: adguard
