k8s/apps/dns/adguard/base/svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-ui
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: adguard
  type: ClusterIP
