k8s/apps/dns/adguard/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  hostnames:
    - "adguard.example.com"
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: gateway-api
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: adguard-ui
          group: ""
          port: 3000
          weight: 1
